tests/baselines/reference/keyofDoesntContainSymbols.errors.txt
tests/cases/compiler/keyofDoesntContainSymbols.ts(10,30): error TS2345: Argument of type '""' is not assignable to parameter of type 'number'.
tests/cases/compiler/keyofDoesntContainSymbols.ts(13,23): error TS2345: Argument of type 'unique symbol' is not assignable to parameter of type '"str" | "num"'.


==== tests/cases/compiler/keyofDoesntContainSymbols.ts (2 errors) ====
    const sym = Symbol();
    const obj = { num: 0, str: 's', [sym]: sym };
    
    function set <T extends object, K extends keyof T> (obj: T, key: K, value: T[K]): T[K] {
      return obj[key] = value;
    }
    
    const val = set(obj, 'str', '');
    // string
    const valB = set(obj, 'num', '');
                                 ~~
!!! error TS2345: Argument of type '""' is not assignable to parameter of type 'number'.
    // Expect type error
    // Argument of type '""' is not assignable to parameter of type 'number'.
    const valC = set(obj, sym, sym);
                          ~~~
!!! error TS2345: Argument of type 'unique symbol' is not assignable to parameter of type '"str" | "num"'.
    // Expect type error
    // Argument of type 'unique symbol' is not assignable to parameter of type '"str" | "num"
    type KeyofObj = keyof typeof obj;
    // "str" | "num"
    type Values<T> = T[keyof T];
    
    type ValuesOfObj = Values<typeof obj>;